# phronesis

./: .gitignore  COLOR_SCHEME.md  DATABASE.md  DATABASE_INFO.md  DEPLOYMENT.md  DEPLOY_CHECKLIST.md  QUIZ_MODE.md  README.md  SCROLL_CONTENT_CACHE.md  app.py  backup_readme.md  build.sh  crud.py  database.py  env_example.txt  main.py  models.py  pyproject.toml  render.yaml  requirements.txt  run.py
frontend/: index.html  package-lock.json  package.json  test-pipecat.html
frontend/src/: App.css  App.tsx  CodeIDE.tsx  CodingChallenge.tsx  ConnectionTest.tsx  PipecatVoiceChat.tsx  TavusChat.tsx  VoiceChat.tsx  VoiceChatWrapper.tsx  config.ts  index.css
server/: bot-gemini.py  requirements.txt  server.py
static/: style.css
templates/: base.html  feed.html  index.html
