[project]
name = "phronesis"
version = "0.1.0"
description = "AI-powered learning feed - Transform your scrolling habit into a learning journey"
requires-python = ">=3.9"
dependencies = [
    "flask==2.3.3",
    "python-dotenv==1.0.0",
    "google-generativeai==0.3.2",
    "requests==2.31.0",
    "gunicorn==21.2.0",
    "flask-cors==4.0.0",
    "flask-socketio==5.3.6",
    "python-socketio==5.11.1",
    "websockets==12.0",
    "sqlalchemy>=2.0.44",
    "alembic>=1.16.5",
    "pipecat-ai>=0.0.36",
    "daily-python>=0.19.9",
]

[tool.uv]
package = false
